changes to model

--- a/Project 2/Project2.ipynb
+++ b/Project 2/Project2.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,11 +179,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.2 Model Selection\n",
+    "\n",
+    "## 1.2.1 Building the CNN Model "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.layers import Dense, Flatten\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "from keras.optimizers import SGD\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Conv2D(16, (3, 3), activation='relu', input_shape=(32, 32, 3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(256, activation='relu'))\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "\n",
+    "sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "model.compile(loss='categorical_crossentropy', metrics=['accuracy'], optimizer=sgd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_3 (Conv2D)            (None, 30, 30, 16)        448       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 15, 15, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 13, 13, 32)        4640      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 6, 6, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 4, 4, 64)          18496     \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 256)               262400    \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 10)                2570      \n",
+      "=================================================================\n",
+      "Total params: 288,554\n",
+      "Trainable params: 288,554\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "code",
